# snasic

./: LICENSE  README.md  arguments.yaml  example.bas  pyproject.toml  snasic.py
snasic/: app_control.py  arrow_keys.py  config.py  controls.py  load_file.py  parse.py  python_debug.py  run_basic_program.py  screen.py
snasic/argument_parse/: collect.py
snasic/basic_functions/: basic_keywords.py  color_palette.py
snasic/explore/: explorer.py
snasic/file_viewer/: file_viewer.py
snasic_lib/: config.py  load_file.py  pad.py  parse.py  python_debug.py  run_basic_program.py  screen.py  window.py
snasic_lib/basic_functions/: basic_keywords.py  color_palette.py
snasic_lib/explore/: explorer.py
snasic_lib/file_viewer/: file_viewer.py
