[tool.poetry]
name = "snasic"
version = "0.2.0"
description = "A Python BASIC Interpreter"
authors = ["JP Etcheber <jetcheber@gmail.com>"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
